--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,26 @@
-machine:
-    services:
-        - docker
+version: 2.1
+executors:
+  my-custom-executor:
+    docker:
+      - image: cimg/base:stable
+        auth:
+          # ensure you have first added these secrets
+          # visit app.circleci.com/settings/project/github/JHarrisonEcoEvo/nextflow_gbs/environment-variables
+          username: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_PASSWORD
+jobs:
+  se_demux_to_bam_bai_denovo:
 
-dependencies:
-    override:
+    executor: my-custom-executor
+    steps:
+      - checkout
+      - run: |
+          curl -fsSL get.nextflow.io | bash
+          ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4
+          
 
-test:
-    override:
-        - docker pull harrisonjg/se_demux_to_bam_bai_denovo
-        - curl -fsSL get.nextflow.io | bash
-        - ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4
-
+workflows:
+  my-custom-workflow:
+    jobs:
+      - se_demux_to_bam_bai_denovo
 
