--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - checkout
       - run: |
+          export PATH=/home/circleci/project/bin
           curl -fsSL get.nextflow.io | bash
           ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4
           
