--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,11 @@
 version: 2.1
 jobs:
   se_demux_to_bam_bai_denovo:
+  machine:
+    java:
+        version: oraclejdk8
+    services:
+        - docker
     docker:
       - image: harrisonjg/nf_se_demux_to_bam_bai_denovo
     steps:
