--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,27 @@
-version: 2.1
+version: 2.0
 jobs:
-  se_demux_to_bam_bai_denovo:
-    docker:
-      - image: harrisonjg/nf_se_demux_to_bam_bai_denovo
-      - image: nextflow/nextflow
+  build:
+    machine:
+      pre:
+        - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
+      java:
+        version: oraclejdk8
+      services:
+        - docker
+      docker: 
+         - image: harrisonjg/nf_se_demux_to_bam_bai_denovo
     steps:
-      - checkout
-      - run: |
-          wget -qO- https://get.nextflow.io | bash
-          ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4
-          
-workflows:
-  my-custom-workflow:
-    jobs:
-      - se_demux_to_bam_bai_denovo
+      - checkout    
+      - run:
+          name: Get Nextflow and required tools
+          command: |
+            curl -fsSL get.nextflow.io | bash
+            #apt install -y zip unzip
+      - run:    
+          name: Run the workflow
+          command: |
+            ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
+          no_output_timeout: 1500
+      - store_artifacts:
+          path: test_out
 
