--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:    
           name: Run the workflow
           command: |
-            ./nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
+            nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
           no_output_timeout: 1500
       - store_artifacts:
           path: test_out
