--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,16 @@
 version: 2.0
-jobs:
-  build:
-    machine:
-      pre:
-        - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
-      java:
-        version: oraclejdk8
-      services:
-        - docker
-      docker: 
+executors: 
+ docker-executor:
+   docker:
          - image: harrisonjg/nf_se_demux_to_bam_bai_denovo
          - image: nextflow/nextflow
+jobs:
+  run_nextflow:
+    executor: docker-executor
     steps:
       - checkout    
       - run:    
           name: Run the workflow
           command: |
             nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
-          no_output_timeout: 1500
-      - store_artifacts:
-          path: test_out
 
