--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,6 @@ jobs:
           name: Run the workflow
           command: |
             nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
-
+workflows:
+ jobs:
+  - run_nextflow
