--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,6 @@ jobs:
           command: |
             nextflow run se_demux_to_bam_bai_denovo --in ./data/sample1.fastq --key data/samplekey.csv --path_out ./data/ --dbpath ./contaminants/ --mode denovo --threshold 4 -with-docker harrisonjg/nf_se_demux_to_bam_bai_denovo
 workflows:
- jobs:
+ myworkflow:
+   jobs:
   - run_nextflow
