--- a/teton.config
+++ b/teton.config
@@ -9,7 +9,7 @@ process {
     process.executor = 'slurm'
     // Put in whatever options that are accepted by our system
     // including things like, "--partition="teton-hugemem" --mem=400000
-    clusterOptions = '--accout=evolgen --time=01:00:00 --cpus-per-task=1  --ntasks-per-node=4'
+    clusterOptions = '--account=evolgen --time=01:00:00 --cpus-per-task=1  --ntasks-per-node=4'
     singularity.enabled = true
 }
 
@@ -17,4 +17,9 @@ singularity {
   enabled = true
   autoMounts = true
   cacheDir = '/project/evolgen/singularity_containers'
+}
+
+executor {
+    queueSize = 200
+    submitRateLimit = '200/2min'
 }
