--- a/teton.config
+++ b/teton.config
@@ -18,3 +18,8 @@ singularity {
   autoMounts = true
   cacheDir = '/project/evolgen/singularity_containers'
 }
+
+executor {
+    queueSize = 200
+    submitRateLimit = '200/2min'
+}
